--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+</html>
+    <head>
+        <meta charset="UTF-8">
+        <title> Carros sportivos</title>
+        <img id="" src="">
+        <link rel="stylesheet" href="style.css>"
+
+
+        <style>
+            P{
+                text-align: center;
+            }
+        </style>
+    </head>
+    <body>
+        <h1 style=>Sobre Carros Sportivos</h1>
+
+        <p style=>Carros de luxo no Brasil o <strong>Carros Sportivos</strong> a loja traz para você os carros de corrida mais eficientes. Criada
+    </body>
 
